--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,37 +1,20 @@
-# Dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Node modules
+**/node_modules/
 
-# Environment
-.env
-.env.local
-.env.development
-.env.test
-.env.production
+# Environment files
+**/.env
+**/.env*
+
+# Build files
+dist/
+build/
 
 # Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Vercel
-.vercel
-
-# IDE
-.vscode
-.idea
-
-# Build
-dist
-build
 *.log
 
-# Backend specific
-/backend/node_modules
-/backend/.env
-/backend/package-lock.json
+# Editor files
+.vscode/
+.idea/
 
-# Frontend specific
-/frontend/node_modules
-/frontend/dist
+# OS generated files
+.DS_Store
