--- a/vercel.json
+++ b/vercel.json
@@ -2,25 +2,22 @@
   "version": 2,
   "builds": [
     {
-      "src": "backend/app.js",
+      "src": "app.js",
       "use": "@vercel/node"
     },
     {
-      "src": "frontend/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
+      "src": "dist/**/*",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "backend/app.js"
+      "dest": "app.js"
     },
     {
       "src": "/(.*)",
-      "dest": "frontend/dist/$1"
+      "dest": "dist/index.html"
     }
   ]
 }
