--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -11,6 +11,10 @@
   ],
   "routes": [
     {
+      "src": "/(assets|.*\\.(js|css|ico|png|jpg|jpeg|svg|woff|woff2))",
+      "dest": "/$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.html"
     }
